src/test/deca/context/invalid/provided/ContextSansObjet/typeNonReconnu.deca
//Description:
//  type non reconnu
//
//Résultat:
// Erreur Contextuelle
//  ligne 8 : 
{
itn i=4;
}
